--- a/P_sets/p_sets/c1_ps14-18.html
+++ b/P_sets/p_sets/c1_ps14-18.html
@@ -1,19 +1,19 @@
 <html>
-	<table style="padding: 10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">14.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
-    			Evaluate each of the following
-    			<br>
-    			<br>
-	            a. $P(7,2)$ &nbsp;&nbsp; b. $P(8,4)$ &nbsp;&nbsp; c. $P(10,7)$ &nbsp;&nbsp; d. $P(12,3)$
-    		</td>
-  		</tr>
+			<td class="vtop_zero">14.</td>
+  		<td class="vtop_r20l10">
+  			Evaluate each of the following
+  			<br>
+  			<br>
+        a. $P(7,2)$ &nbsp;&nbsp; b. $P(8,4)$ &nbsp;&nbsp; c. $P(10,7)$ &nbsp;&nbsp; d. $P(12,3)$
+  		</td>
+  	</tr>
 	</table>
-	<table style="vertical-align:top; padding: 20 0 0 0">
+	<table class="pt20_r20">
 	    <tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">15.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
+        <td class="vtop_zero">15.</td>
+    		<td class="vtop_r20l10">
     			In how many ways can the symbols 
     			<code>a,b,c,d,e,e,e,e,e</code> 
     			be arranged so that no 
@@ -22,29 +22,29 @@
     			<code>e</code>.
 	        </td>
 	    </tr>
-    </table>
- 	<table style="vertical-align:top; padding: 20 20 0 0">
+  </table>
+ 	<table class="pt20_r20">
      	<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">16.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
+        <td class="vtop_zero">16.</td>
+    		<td class="vtop_r20l10">
     			An alphabet of 40 symbols is used for transmitting messeges in a communication system. How many distinct messeges (lists of symbols) of 25 symbols can the transmitter generate if symbols can be repeated in the message? How many if 10 of the 40 symbols can appear only as the first and/or last symbols of the messege, the other 30 symbols can appear anywhere, and repetitions of all symbols are allowed?
 	        </td>
-      	</tr>
-    </table>
-    <table style="vertical-align:top; padding: 20 20 0 0">
-     	<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">17.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
-    			In the Internet, each network interface of a computer is asigned one, or more, Internet addresses. The nature of these Internet addresses is dependent on network size. For the Internet Standard regarding reserved network numbers (STD 2), each address is a 32&ndash;bit string which falls into one of the following three classes: (1) a class A address, used for the largest networks, begins with a 0, which is then followed by a 7&ndash;bit <code>network number</code>, and then a 24&ndash;bit <code>local address</code>. However, one is restricted from using the network numbers of all 0's or all 1's and the local addresses of all 0's or all 1's. (2) The class B address is meant for an intermediate&ndash;sized network. This address starts with the 2&ndash;bit string 10, which is followed by a 14&ndash;bit network number and a 16&ndash;bit local address. But the local addresses of all 0's or all 1's are not permitted. (3) Class C addresses are used for the smallest networks. These addresses consist of the 3&ndash;bit string 110, followed by a 21&ndash;bit network number, and then an 8&ndash;bit local address. Once again, the local addresses of all 0's or all 1's are excluded. How many different addresses of each class are available on the Internet, for this Internet Standard?
-	        </td>
-      	</tr>
-    </table>
-    <table style="vertical-align:top; padding: 20 20 10 0">
-     	<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">18.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
-    			Morgan is considering the purchase of a low&ndash;end computer system. After some careful investigating, she finds that there are seven basic systems (each consisting of a monitor, CPU, keyboard, and mouse) that meet her reqiurements. Furthermore, she also plans to buy one of four modems, one of three CD ROM drives, and one of six printers. (Here, each peripheral device of a given type, such as the modem, is compatible with all seven basic systems.) In how many ways can Morgan configure her low&ndash;end computer system?
-	        </td>
-      	</tr>
-    </table>
+      </tr>
+  </table>
+  <table class="pt20_r20">
+    <tr>
+      <td class="vtop_zero">17.</td>
+  		<td class="vtop_r20l10">
+  			In the Internet, each network interface of a computer is asigned one, or more, Internet addresses. The nature of these Internet addresses is dependent on network size. For the Internet Standard regarding reserved network numbers (STD 2), each address is a 32&ndash;bit string which falls into one of the following three classes: (1) a class A address, used for the largest networks, begins with a 0, which is then followed by a 7&ndash;bit <code>network number</code>, and then a 24&ndash;bit <code>local address</code>. However, one is restricted from using the network numbers of all 0's or all 1's and the local addresses of all 0's or all 1's. (2) The class B address is meant for an intermediate&ndash;sized network. This address starts with the 2&ndash;bit string 10, which is followed by a 14&ndash;bit network number and a 16&ndash;bit local address. But the local addresses of all 0's or all 1's are not permitted. (3) Class C addresses are used for the smallest networks. These addresses consist of the 3&ndash;bit string 110, followed by a 21&ndash;bit network number, and then an 8&ndash;bit local address. Once again, the local addresses of all 0's or all 1's are excluded. How many different addresses of each class are available on the Internet, for this Internet Standard?
+        </td>
+    </tr>
+  </table>
+  <table class="vtop_t20-r20-b10">
+    <tr>
+		  <td class="vtop_zero">18.</td>
+  		<td class="vtop_r20l10">
+  			Morgan is considering the purchase of a low&ndash;end computer system. After some careful investigating, she finds that there are seven basic systems (each consisting of a monitor, CPU, keyboard, and mouse) that meet her reqiurements. Furthermore, she also plans to buy one of four modems, one of three CD ROM drives, and one of six printers. (Here, each peripheral device of a given type, such as the modem, is compatible with all seven basic systems.) In how many ways can Morgan configure her low&ndash;end computer system?
+      </td>
+    </tr>
+  </table>
 </html>
