--- a/P_sets/p_sets/c1_ss10-13.html
+++ b/P_sets/p_sets/c1_ss10-13.html
@@ -1,8 +1,8 @@
 <html>
-	<table style="padding: 0 0 0 0">
+	<table>
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 00">10.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">10.</td>
+			<td class="vtop_r20l10">
 				Any subdivision of the fifteen books resulting in two nonempty shelves gives us $15!$ ways to arrange the books &mdash; for example
 				<div id="wall">
 					<div class="shelf">
@@ -25,11 +25,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding: 20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">11.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">11.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						There are four roads connecting towns A and B, and three roads from B to C. So, by the rule of product, there are $4\cdot3=12$ roads from A to C passing through B. Since there are two direct roads from A to C, there are $12+2=14$ destinct ways in which Linda can travel to C from A. $\square$
 					</li>
@@ -43,11 +43,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding: 20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:21 0 0 00">12.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ul style="list-style-type:none; padding:0 0 0 0">
+			<td class="vtop_t20">12.</td>
+			<td class="vtop_lten">
+				<ul style="list-style-type:none">
 					<li>
 						$
 						\text{P}=
@@ -62,11 +62,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding: 20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">13.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">13.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						This is equivalent to asking: "In how many ways can we permute 8 objects selected from a set of 8 objects?," which is equal to  $P(8,8)=8!. \ \square$
 					</li>
