--- a/P_sets/p_sets/c1_ss30-36.html
+++ b/P_sets/p_sets/c1_ss30-36.html
@@ -1,9 +1,9 @@
 <html>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">30.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">30.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						For five letters, there are $26\cdot26\cdot26\cdot1\cdot1=26^3$ such palindromes. For six letters, there are also $26\cdot26\cdot26\cdot1\cdot1\cdot1=26^3.$ $\square$
 					</li>
@@ -14,15 +14,15 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">31.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">31.</td>
+			<td class="vtop_lten">
 				Let $N=\langle n_1 \ n_2 \ n_3 \ n_4 \ n_5 \ n_6 \rangle.$ By the rule of product, there are
-				<ol type="a" style="margin:5 20 0 0">
+				<ol type="a" class="mar_t5_r20">
 					<li>
 						$9\cdot9\cdot8\cdot7\cdot6\cdot5=136,080$ six&ndash;digit integers with no leading zeros and no repeating digits. $\square$
-						<ol type="i" style="padding:5 0 0 30">
+						<ol type="i" class="t5_l30">
 							<li>
 								$(9\cdot8\cdot7\cdot6\cdot5\cdot1) \ [n_6=0] + (8\cdot8\cdot7\cdot6\cdot5\cdot4) \ [n_6=2,4,6,8]$
 								<br>
@@ -44,7 +44,7 @@
 					</li>
 					<li>
 						When repeating is allowed, there are $9\times10^5$ such six&ndash;digit integers. $\square$
-						<ol type="i" style="padding:5 0 5 30">
+						<ol type="i" class="t5_b5_l30">
 							<li>
 								$(9\cdot10\cdot10\cdot10\cdot10\cdot5) \ [n_6=2k] =450,000. \ \square$
 							</li>
@@ -60,11 +60,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">32.</td>
-			<td style="vertical-align:top; padding:0 20 0 20">
-				<ol type="a" style="padding:0 0 0 10">
+			<td class="vtop_zero">32.</td>
+			<td class="vtop_r20l20">
+				<ol type="a" class="pl_10">
 					<li>
 						Consider the $n$ objects $x_1,x_1,x_1,\dots,x_k,x_k,x_k.$ The number of ways in which we can arrange all of these $n=3k$ symbols is an integer of size 
 						$$\frac{n!}{ \ 3! \ 3! \ \cdots \ 3! \ 3! \\ [k \ \text{factors of 3}]}=\frac{n!}{(3!)^k}. \ \square$$
@@ -79,11 +79,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">33.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">33.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						With two choices per question, there are $2^{10}=1024$ distinct answer&ndash;keys. $\square$
 					</li>
@@ -94,10 +94,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 20 0; width:95%">
+	<table class="pblm_34">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 0">34.</td>
-			<td style="vertical-align:top; padding:0 0 0 0">
+			<td class="vtop_zero">34.</td>
+			<td class="vtop_zero">
 				Let us consider the relevant cases, where $i_j \in INT$:
 				$$
 				INT=
@@ -120,11 +120,11 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">35.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">35.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						If arrangements are considered to be the same when one can be obtained from the other by rotation, then we have
 						<div style="padding:08 0 10 0">
@@ -233,10 +233,10 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 10 0">
+	<table class="r20_b10">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">36.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">36.</td>
+			<td class="vtop_lten">
 				First, we locate person $A.$ Now, there are two cases to consider for a person $(P)$ sharing a table side with person $A.$ In either case, we have
 				<ol type="i">
 					<li>$(P,A)=7!$</li>
