--- a/P_sets/p_sets/c1_ps19-23.html
+++ b/P_sets/p_sets/c1_ps19-23.html
@@ -1,8 +1,8 @@
 <html>
-	<table style="padding: 10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">19.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
+			<td class="vtop_zero">19.</td>
+    		<td class="vtop_r20l10">
     			A computer science professor has seven different programming books on a bookshelf. Three of the books deal with C++, the other four with Java. In how many ways can the professor arrange the books on the shelf
     			 <ol type="a">
     			 	<li>if there are no restrictions?</li>
@@ -15,10 +15,10 @@
     		</td>
   		</tr>
 	</table>
-	<table style="padding: 10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">20.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
+			<td class="vtop_zero">20.</td>
+    		<td class="vtop_r20l10">
     			Over the Internet, data are transmitted in structured blocks of bits called datagrams.
     			 <ol type="a">
     			 	<li>In how many ways can the letters in DATAGRAM be arranged?</li>
@@ -27,11 +27,11 @@
     		</td>
   		</tr>
 	</table>
-	<table style="padding: 10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">21.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
-    			 <ol type="a" style="vertical-align:top; padding: 0 0 0 20">
+			<td class="vtop_zero">21.</td>
+    		<td class="vtop_r20l10">
+    			 <ol type="a" class="pl_20">
     			 	<li>How many arrangments are there of all the letters in SOCIOLOGICAL?</li>
     			 	<li>In how many of the arrangements in part (a) are A and G adjacent?</li>
     			 	<li>In how many of the arrangements in part (a) are all the vowels adjacent?</li>
@@ -39,18 +39,18 @@
     		</td>
   		</tr>
 	</table>
-	<table style="padding: 10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">22.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
+			<td class="vtop_zero">22.</td>
+    		<td class="vtop_r20l10">
     			How many positive integers $n$ can we form using the digits $3,4,4,5,5,6,7$ if we want $n$ to exceed $5,000,000?$
     		</td>
   		</tr>
 	</table>
-	<table style="padding: 20 0 0 0">
+	<table class="pt_20">
 		<tr>
-			<td style="vertical-align:top; padding: 0 00 0 00">23.</td>
-    		<td style="vertical-align:top; padding: 0 20 0 10">
+			<td class="vtop_zero">23.</td>
+    		<td class="vtop_r20l10">
     			Twelve clay targets (identical in shape) are arranged in four hanging columns, as shown in the figure below. There are four red targets in the first column, three white ones in the second column, two green targets in the third column, and three blue ones in the fourth column. To join her college drill team, Deborah must break all twelve of these targets (using her pistol and only twelve bullets) and in so doing must always break the existing tartget at the bottom of a column. Under these conditions, in how many different orders can Deborah shoot down (and break) the twelve targets?
     		</td>
   		</tr>
