--- a/P_sets/p_sets/c1_ps24-29.html
+++ b/P_sets/p_sets/c1_ps24-29.html
@@ -1,17 +1,17 @@
 <html>
-	<table style="padding:10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 00">24.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">24.</td>
+			<td class="vtop_r20l10">
 				Show that for all integers $n,r \geq 0, \ \text{if} \ n+1 > r,$ then
 				$$P(n+1,r)=\bigg(\frac{n+1}{n+1-r}\bigg)P(n,r).$$
 			</td>
-			</tr>
+		</tr>
 	</table>
-	<table style="padding:0 0 0 0">
+	<table>
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 00">25.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">25.</td>
+			<td class="vtop_r20l10">
 				Find the values(s) of $n$ in each of the folloing:
 				 <ol type="a">
 				 	<li>$P(n,2)=90,$</li>
@@ -19,21 +19,21 @@
 				 	<li>$2P(n,2)+50=P(2n,2).$</li>
 				</ol>
 			</td>
-			</tr>
+		</tr>
 	</table>
-	<table style="padding:0 0 0 0">
+	<table>
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 00">26.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">26.</td>
+			<td class="vtop_r20l10">
 				How many different paths in the $xy$&ndash;plane are there from $(0,0)$ to $(7,7)$ if a path proceeds one step at a time by going either one space to the right (R) or one space upward (U)? How many such paths are there from (2,7) to (9,14)? Can any general statement be made that incorporates these two results?
 			</td>
-			</tr>
+		</tr>
 	</table>
-	<table style="padding: 10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 0">27.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">27.</td>
+			<td class="vtop_r20l10">
+				<ol type="a" class="pl_20">
 					<li>
 						How many distinct paths are there from $(-1,2,0)$ to $(1,3,7)$ in Euclidean three&ndash;space? If each move is one of the following types?
 						$$
@@ -48,13 +48,13 @@
 					<li>Generalize the results in parts (a) and (b).</li>
 				</ol>
 			</td>
-			</tr>
+		</tr>
 	</table>
-	<table style="padding: 10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 0">28.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">28.</td>
+			<td class="vtop_r20l10">
+				<ol type="a" class="pl_20">
 					<li>
 						Determine the value of the integer variable counter afer execution of the following program segment. (Here $i,j$ and $k$ are integer variables.)
 						<code class="code_block">
@@ -76,12 +76,12 @@
 					<li>Which counting principle is at play in part (a)?</li>
 				</ol>
 			</td>
-			</tr>
+		</tr>
 	</table>
-	<table style="padding: 10 0 0 0">
+	<table class="pt10">
 		<tr>
-			<td style="vertical-align:top; padding:0 00 0 0">29.</td>
-			<td style="vertical-align:top; padding:0 20 0 10">
+			<td class="vtop_zero">29.</td>
+			<td class="vtop_r20l10">
 				Consider the following program segment where $i,j$ and $k$ are integer variables.
 				<code class="code_block">
 					counter := 0
@@ -94,11 +94,11 @@
 					<br>
 					&nbsp; &nbsp; &nbsp; <b>print</b> (i-j) * k
 				</code>
-				<ol type="a" style="padding:0 0 0 20">
+				<ol type="a" class="pl_20">
 					<li>How many times is the <code>print</code> statement executed?</li>
 					<li>Which counting principle is used in part (a)?</li>
 				</ol>
 			</td>
-			</tr>
+		</tr>
 	</table>
 </html>
