--- a/P_sets/p_sets/c1-s1_3-ps04-07.html
+++ b/P_sets/p_sets/c1-s1_3-ps04-07.html
@@ -1,160 +1,160 @@
 <html>
-	<table style="padding:10 20 10 0">
+	<table class="p_t10_r20_b10">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">04.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">04.</td>
+			<td class="vtop_lten">
 				In the Braille system a symbol, such as a lowercase letter, punctuation mark, suffix, and so on, is given by raising at least one of the dots in the six&ndash;dot arrangement shown in part (a) of the figure below (The six Braille positions are labeled in this part of the figure.) For example, in part (b) of the figure the dots in postions 1 and 4 are raised, and this six&ndash;dot arrangment represents the letter c. In parts (c) and (d) of the figure, we have the representations of the letters m and t, respectively. The definite article "the" is shown in part (e) of the figure, while part (f) contains the form for the suffix "ow." Finally, the semicolon, ;, is given by the six&ndash;dot arrangement in part (g), where the dots at positions 2 and 3 are raised.
-				<table style="border-collapse:collapse; margin:10 0 0 0; font-family:'SourCecodePro-Regular'; font-size:13; color:#707B7C">
+				<table class="braille_border">
 					<tr>
-						<td style="vertical-align:top; padding:5 10; border:1px solid lightgrey; text-align:center">
-							<table style="font-family:'SourCecodePro-Regular'; font-size:13; color:#707B7C">
+						<td class="braille_one">
+							<table class="braille_two">
 								<tr>
-									<td style="padding:1 0 0 0; float:right">1 
-										<span style="font-size:8">
-											<div style="margin:4 0 0 0; float:right; color:#99B5CD">&#9679;</div>
+									<td class="braille_three">1 
+										<span class="fs_eight">
+											<div class="braille_four">&#9679;</div>
 										</span>
 									</td>
-									<td style="padding:1 0 0 30; float:right">4 
-										<span style="font-size:8">
-											<div style="margin:4 0 0 5; float:right; color:#99B5CD">&#9679;</div>
+									<td class="braille_five">4 
+										<span class="fs_eight">
+											<div class="braille_six">&#9679;</div>
 										</span>
 									</td>
 								</tr>
 								<tr>
-									<td style="padding:10 0 0 0; float:right">2 
-										<span style="font-size:8">
-											<div style="margin:3 0 0 5; float:right; color:#99B5CD">&#9679;</div>
+									<td class="braille_seven">2 
+										<span class="fs_eight">
+											<div class="braille_eight">&#9679;</div>
 										</span>
 									</td>
-									<td style="padding:10 0 0 30; float:right">5 
-										<span style="font-size:8">
-											<div style="margin:3 0 0 5; float:right; color:#99B5CD">&#9679;</div>
+									<td class="braille_nine">5 
+										<span class="fs_eight">
+											<div class="braille_eight">&#9679;</div>
 										</span>
 									</td>
 								</tr>
 								<tr>
-									<td style="padding:10 0 0 00; float:right">3 
-										<span style="font-size:8">
-											<div style="margin:3 0 0 5; float:right; color:#99B5CD">&#9679;</div>
+									<td class="braille_seven">3 
+										<span class="fs_eight">
+											<div class="braille_eight">&#9679;</div>
 										</span>
 									</td>
-									<td style="padding:10 0 0 30; float:right">6 
-										<span style="font-size:8">
-											<div style="margin:3 0 0 5; float:right; color:#99B5CD">&#9679;</div>
+									<td class="braille_nine">6 
+										<span class="fs_eight">
+											<div class="braille_eight">&#9679;</div>
 										</span>
 									</td>
 								</tr>
 							</table>
 							<p>(a)</p>
 						</td>
-						<td style="vertical-align:top; padding:5 10; border:1px solid lightgrey; text-align:center">
-							<table style="font-family:'SourCecodePro-Regular'; font-size:13; color:#707B7C">
+						<td class="braille_one">
+							<table class="braille_two">
 								<tr>
-									<td style="padding:0 0 0 00; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:0 0 0 35; color:#99B5CD; font-size:16">&#9679;</td>
+									<td class="braille_ten">&#9679;</td>
+									<td class="braille_eleven">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:12 0 0 02; color:#99B5CD; font-size:08">&#9679;</td>
-									<td style="padding:12 0 0 37; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_twelve">&#9679;</td>
+									<td class="braille_thirteen">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:17 0 0 02; color:#99B5CD; font-size:08">&#9679;</td>
-									<td style="padding:17 0 0 37; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_fourteen">&#9679;</td>
+									<td class="braille_fifteen">&#9679;</td>
 								</tr>
 							</table>
-							<div style="margin:16 0 0 0">(b) "c"</div>
+							<div class="braille_sixteen">(b) "c"</div>
 						</td>
-						<td style="vertical-align:top; padding:5 10; border:1px solid lightgrey; text-align:center">
-							<table style="font-family:'SourCecodePro-Regular'; font-size:13; color:#707B7C">
+						<td class="braille_one">
+							<table class="braille_two">
 								<tr>
-									<td style="padding:0 0 0 00; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:0 0 0 35; color:#99B5CD; font-size:16">&#9679;</td>
+									<td class="braille_ten">&#9679;</td>
+									<td class="braille_seventeen">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:12 0 0 02; color:#99B5CD; font-size:08">&#9679;</td>
-									<td style="padding:12 0 0 37; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_twelve">&#9679;</td>
+									<td class="braille_thirteen">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:13 0 0 02; color:#99B5CD; font-size:016">&#9679;</td>
-									<td style="padding:13 0 0 37; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_eighteen">&#9679;</td>
+									<td class="braille_nineteen">&#9679;</td>
 								</tr>
 							</table>
-							<div style="margin:10 0 0 0">(c) "m"</div>
+							<div class="braille_twenty">(c) "m"</div>
 						</td>
-						<td style="vertical-align:top; padding:5 10; border:1px solid lightgrey; text-align:center">
-							<table style="font-family:'SourCecodePro-Regular'; font-size:13; color:#707B7C">
+						<td class="braille_one">
+							<table class="braille_two">
 								<tr>
-									<td style="padding:2 0 0 04; color:#99B5CD; font-size:08">&#9679;</td>
-									<td style="padding:0 0 0 37; color:#99B5CD; font-size:16">&#9679;</td>
+									<td class="braille_21">&#9679;</td>
+									<td class="braille_22">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:08 0 0 02; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:08 0 0 37; color:#99B5CD; font-size:16">&#9679;</td>
+									<td class="braille_23">&#9679;</td>
+									<td class="braille_24">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:08 0 0 02; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:08 0 0 40; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_23">&#9679;</td>
+									<td class="braille_25">&#9679;</td>
 								</tr>
 							</table>
-							<div style="margin:10 0 0 0">(d) "t"</div>
+							<div class="braille_twenty">(d) "t"</div>
 						</td>
 					</tr>
 					<tr>
-						<td style="vertical-align:top; padding:5 10; border:1px solid lightgrey; text-align:center">
-							<table style="font-family:'SourCecodePro-Regular'; font-size:13; color:#707B7C">
+						<td class="braille_one">
+							<table class="braille_two">
 								<tr>
-									<td style="padding:2 0 0 04; color:#99B5CD; font-size:08">&#9679;</td>
-									<td style="padding:0 0 0 37; color:#99B5CD; font-size:16">&#9679;</td>
+									<td class="braille_21">&#9679;</td>
+									<td class="braille_22">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:08 0 0 02; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:08 0 0 39; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_23">&#9679;</td>
+									<td class="braille_25">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:08 0 0 02; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:08 0 0 37; color:#99B5CD; font-size:16">&#9679;</td>
-								</tr>
-							</table>
-							<div style="margin:10 0 0 0">(e) "the"</div>
-						</td>
-						<td style="vertical-align:top; padding:5 10; border:1px solid lightgrey; text-align:center">
-							<table style="font-family:'SourCecodePro-Regular'; font-size:13; color:#707B7C">
-								<tr>
-									<td style="padding:2 0 0 04; color:#99B5CD; font-size:08">&#9679;</td>
-									<td style="padding:0 0 0 37; color:#99B5CD; font-size:16">&#9679;</td>
-								</tr>
-								<tr>
-									<td style="padding:08 0 0 02; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:08 0 0 39; color:#99B5CD; font-size:08">&#9679;</td>
-								</tr>
-								<tr>
-									<td style="padding:08 0 0 04; color:#99B5CD; font-size:08">&#9679;</td>
-									<td style="padding:08 0 0 37; color:#99B5CD; font-size:16">&#9679;</td>
+									<td class="braille_23">&#9679;</td>
+									<td class="braille_24">&#9679;</td>
 								</tr>
 							</table>
-							<div style="margin:10 0 0 0">(f) "ow"</div>
+							<div class="braille_twenty">(e) "the"</div>
 						</td>
-						<td style="vertical-align:top; padding:5 10; border:1px solid lightgrey; text-align:center">
-							<table style="font-family:'SourCecodePro-Regular'; font-size:13; color:#707B7C">
+						<td class="braille_one">
+							<table class="braille_two">
 								<tr>
-									<td style="padding:2 0 0 04; color:#99B5CD; font-size:08">&#9679;</td>
-									<td style="padding:0 0 0 37; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_21">&#9679;</td>
+									<td class="braille_22">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:08 0 0 02; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:08 0 0 37; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_23">&#9679;</td>
+									<td class="braille_25">&#9679;</td>
 								</tr>
 								<tr>
-									<td style="padding:08 0 0 02; color:#99B5CD; font-size:16">&#9679;</td>
-									<td style="padding:08 0 0 37; color:#99B5CD; font-size:08">&#9679;</td>
+									<td class="braille_nn">&#9679;</td>
+									<td class="braille_24">&#9679;</td>
 								</tr>
 							</table>
-							<div style="margin:18 0 0 0">(g) ";"</div>
+							<div class="braille_twenty">(f) "ow"</div>
 						</td>
-						<td style="vertical-align:top; padding:5 10; border:1px solid transparent; text-align:center">&nbsp;</td>
+						<td class="braille_one">
+							<table class="braille_two">
+								<tr>
+									<td class="braille_21">&#9679;</td>
+									<td class="braille_22">&#9679;</td>
+								</tr>
+								<tr>
+									<td class="braille_23">&#9679;</td>
+									<td class="braille_24">&#9679;</td>
+								</tr>
+								<tr>
+									<td class="braille_23">&#9679;</td>
+									<td class="braille_24">&#9679;</td>
+								</tr>
+							</table>
+							<div class="braille_26">(g) ";"</div>
+						</td>
+						<td class="braille_one"></td>
 					</tr>
 				</table>
-				<ol type="a" style="padding:0 0 0 40">
+				<ol type="a" class="pl_40">
 					<li>How many different symbols can we represent in the Braille system?</li>
 					<li>How many symbols have exactly three raised dots?</li>
 					<li>How many symbols have an even number of raised dots?</li>
@@ -162,31 +162,31 @@
 			</td>
 		</tr>
 	</table>
-	<table style="padding:0 20 0 0">
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">05.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">05.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>How many size&ndash;three permutations can one produce with $x_1,x_2,x_3,x_4,x_5?$</li>
 					<li>List all the combinations of size three that result for the items $x_1,x_2,x_3,x_4,x_5$.</li>
 				</ol>
 			</td>
 		</tr>
 	</table>
-	<table style="padding:10 20 0 0">
+	<table class="pt10_r20">
 		<tr>
-			<td style="vertical-align:top; padding:11 0 0 00">06.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_t11">06.</td>
+			<td class="vtop_lten">
 				$\text{If} \ n \ \text{is a positive integer, and} \ n>1, \ \text{prove that} \ \displaystyle{n \choose 2}+{n-1 \choose 2} \ \text{is a perfect}$ square.
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 10 0">
+	<table class="pt20_r20_b10">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">07.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">07.</td>
+			<td class="vtop_lten">
 				A committee of twelve is to be selected from ten of type $\lambda$ and ten of type $\lambda_1$. In how many ways can the selecetion be carried out if
-				<ol type="a" style="margin:5 0 5 20; padding:0 0 0 20">
+				<ol type="a" class="C1_sec1.3_p07">
 					<li>there are no restrictions?</li>
 					<li>there must be six $\lambda$ and six $\lambda_1$?</li>
 					<li>there must be an even number of $\lambda_1$?</li>
