--- a/P_sets/p_sets/c1_ps30-36.html
+++ b/P_sets/p_sets/c1_ps30-36.html
@@ -1,27 +1,27 @@
 <html>
-	<table style="padding:10 20 0 0">
+	<table class="pt10_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">30.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">30.</td>
+			<td class="vtop_lten">
 				A sequence of letters of the form <code>abcba</code>, where the expression is unchanged upon revising order, is an example of a palindrome (of five letters).
-				<ol type="a" style="margin:5 0 0 0">
+				<ol type="a" class="mar_t5">
 					<li>If a letter may appear more than twice, how many palindromes of five letters are there? of six letters?</li>
 					<li>Repeat part (a) under the condition that no letter may appear twice.</li>
 				</ol>
 			</td>
       	</tr>
     </table>
-    <table style="padding:20 20 0 0">
+    <table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">31.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">31.</td>
+			<td class="vtop_lten">
 				Determine the number of six&ndash;digit integers (no leading zeros) in which
-				<ol type="a" style="margin:5 0 10 0">
+				<ol type="a" class="mar_t5_b10">
 					<li>no digit may be reapeated;</li>
 					<li>digits may be repeated.</li>
 				</ol>
 				Answer parts (a) and (b) with the extra condition that the six&ndash;digit integer is
-				<ol type="i" style="margin:5 0 0 0">
+				<ol type="i" class="mar_t5">
 					<li>even;</li>
 					<li>divisible by five;</li>
 					<li>divisible by four.</li>
@@ -29,11 +29,11 @@
 			</td>
       	</tr>
     </table>
-    <table style="padding:20 20 0 0">
+    <table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">32.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">32.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						Provide a combinatorial argument to show that if $n$ and $k$ are positive integers with $n=3k,$ then $n!/(3!)^k$ is an integer.
 					</li>
@@ -44,11 +44,11 @@
 			</td>
       	</tr>
     </table>
-    <table style="padding:5 20 0 0">
+    <table class="p_t5_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">33.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">33.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						In how many possible ways could a student answer a 10&ndash;question true&ndash;false test?
 					</li>
@@ -59,19 +59,19 @@
 			</td>
       	</tr>
     </table>
-    <table style="padding:5 20 0 0">
+    <table class="p_t5_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">34.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">34.</td>
+			<td class="vtop_lten">
 				How many distinct four&ndash;digit integers can one make from the digits 1,3,3,7,7, and 8?
 			</td>
       	</tr>
     </table>
-    <table style="padding:20 20 0 0">
+    <table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">35.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">35.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						In how many ways can seven people be arranged about a circular table?
 					</li>
@@ -82,11 +82,11 @@
 			</td>
       	</tr>
     </table>
-    <table style="padding:5 20 0 0">
+    <table class="p_t5_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">36.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
-				<ol type="a" style="padding:0 0 0 20">
+			<td class="vtop_zero">36.</td>
+			<td class="vtop_lten">
+				<ol type="a" class="pl_20">
 					<li>
 						In how many ways can eight people, denoted $A,B,\dots,H$ be <u>seated</u> about the square table shown in the figure below?
 					</li>
