--- a/P_sets/p_sets/c1_ps37-39_sec1_3_ps01-03.html
+++ b/P_sets/p_sets/c1_ps37-39_sec1_3_ps01-03.html
@@ -1,69 +1,69 @@
 <html>
-	<table style="padding:10 20 0 0">
+	<table class="pt10_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">37.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">37.</td>
+			<td class="vtop_lten">
 				Sixteen people are to be seated at two circular tables, one of which seats ten, while the other seats six. How many different seating arrangements are possible?
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">38.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">38.</td>
+			<td class="vtop_lten">
 				A committee of fifteen &mdash; nine women and six men &mdash; is to be seated at a circular table (with fifteen seats). In how many ways can the seats be assigned so that no two men are seated next to each other.
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">39.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">39.</td>
+			<td class="vtop_lten">
 				Write a computer program, (or develop an algorithm) to determine whether there is a three&ndash;digit integer $\langle n_1 \ n_2 \ n_3 \rangle:(100n_1+10n_2+n_3),$ where $\langle n_1 \ n_2 \ n_3 \rangle=n_1!+n_2!+n_3!.$
 			</td>
 		</tr>
 	</table>
 	<br>
-	<p class="subtitle" style="border-bottom:1 solid #f2f2f2; padding:0 0 5 0">1.3 Combinations: The Binomial Theorem</p>
-	<table style="padding:0 20 0 0">
+	<p class="subtitle">1.3 Combinations: The Binomial Theorem</p>
+	<table class="pr_20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00; color:#aaa; font-size:14; font-family:'Avenir','light'">Theorem&nbsp;1.2</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="theorem">Theorem&nbsp;1.2</td>
+			<td class="vtop_lten">
 				For positive integers $n,t,$ the coefficient of $x_1^{n_1}x_2^{n_2}x_3^{n_3} \cdots x_t^{n_t}$ in the expansion of $(x_1+x_2+x_3+\cdots+x_t)^n$ is
 				$$\frac{n!}{n_1!n_2!n_3! \cdots n_t!},$$
 				where each $n_i$ is an integer with $0 \leq n_i \leq n,$ for all $1 \leq i \leq t,$ and $n_1+n_2+n_3+\cdots+n_t=n.$ &mdash; <em>multinomial theorem</em>
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:10 0 0 00">01.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_t10">01.</td>
+			<td class="vtop_lten">
 				$\text{Calculate} \ \displaystyle{6 \choose 2} \ \text{and check your answer by listing all the selections of size 2}$
 				<br>
 				that can be made from the items $x_1,x_2,x_3,x_4,x_5,x_6.$
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 0 0">
+	<table class="pt20_r20">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">02.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">02.</td>
+			<td class="vtop_lten">
 				Facing a four&ndash;hour bus trip back to college, Diane decides to take along five magazines from the twelve that her sister Ann Marie has recently acquired. In how many ways can Diane make her selection?
 			</td>
 		</tr>
 	</table>
-	<table style="padding:20 20 10 0">
+	<table class="pt20_r20_b10">
 		<tr>
-			<td style="vertical-align:top; padding:0 0 0 00">03.</td>
-			<td style="vertical-align:top; padding:0 0 0 10">
+			<td class="vtop_zero">03.</td>
+			<td class="vtop_lten">
 				Evaluate each of the following.
-				<table style="padding:10 0 0 0">
+				<table class="pt10">
 					<tr>
-						<td style="padding:0 0 0 00">(a) $C(10,4)$</td>
-						<td style="padding:0 0 0 20">(b) $\displaystyle{12 \choose 7}$</td>
-						<td style="padding:0 0 0 20">(c) $C(14,2)$</td>
-						<td style="padding:0 0 0 20">(d) $\displaystyle{15 \choose 10}$</td>
+						<td class="p_zero">(a) $C(10,4)$</td>
+						<td class="pl_20">(b) $\displaystyle{12 \choose 7}$</td>
+						<td class="pl_20">(c) $C(14,2)$</td>
+						<td class="pl_20">(d) $\displaystyle{15 \choose 10}$</td>
 					</tr>
 				</table>
 			</td>
